# herdr-imebox

./: Cargo.toml  LICENSE  README.md  herdr-plugin.toml
.github/workflows/: release.yml
docs/specs/: 2026-07-16-herdr-imebox-design.md
scripts/: build.sh  fetch.sh
src/: app.rs  config.rs  editor.rs  herdr.rs  history.rs  main.rs  picker.rs  wrap.rs
