[package]
name = "imebox"
version = "0.1.0"
edition = "2024"
description = "IME-friendly pop-up text box for AI agent panes in herdr"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
ratatui = "0.29"
serde_json = "1"
unicode-width = "0.2"
