[package]
name = "imebox"
version = "0.1.1"
edition = "2024"
description = "IME-friendly pop-up text box for AI agent panes in herdr"
license = "MIT"
repository = "https://github.com/Sawakee/herdr-imebox"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
